# moru-app

./: .gitignore  LICENSE  README.md
contracts/: web-api.yaml  (+1 more)
engine/: README.md  pyproject.toml
engine/artifacts/: translate__default-tier__en_us-ja_jp.json  translate__default-tier__en_us-ko_kr.json  translate__default-tier__en_us-zh_cn.json
engine/packaging/: entry.py  moru-engine-server.spec
engine/src/moru_engine/: __init__.py  batching.py  cli.py  community.py  placeholder.py
engine/src/moru_engine/dspy_modules/: __init__.py  artifacts.py  lm.py  signatures.py  translator.py
engine/src/moru_engine/evalset/: __init__.py  builder.py  gate.py  judge.py  metrics.py
engine/src/moru_engine/glossary/: __init__.py  pair_harvester.py  term_miner.py  vanilla_builder.py
engine/src/moru_engine/handlers/: __init__.py  base.py  ftbquests.py  language.py  origins.py  patchouli.py  puffish_skills.py  tconstruct.py  the_vault_quest.py
engine/src/moru_engine/models/: __init__.py  callbacks.py  glossary.py  glossary_filter.py  translation.py  validation.py
engine/tests/: test_artifacts.py  test_community.py  test_evalset.py  test_ftbquests_handler.py  test_gate.py  test_judge.py  test_lang_parser.py  test_lm.py  test_local_tm.py  test_metrics.py  test_nbt_parser.py  test_orchestrator.py  test_output_generator.py  test_pack_identity.py  test_pair_harvester.py  test_pipeline_e2e.py  test_placeholder_roundtrip.py  test_server.py  test_term_miner.py  test_translator_module.py
engine/tools/: build_evalset.py  build_vanilla_glossary.py  evaluate.py  gate.py  optimize.py
(+126 files in other folders)
