[project]
name = "moru-engine"
version = "0.7.1"
description = "Moru translation engine - DSPy-based Minecraft modpack translator"
readme = "README.md"
authors = [
    { name = "Kunho Park", email = "github@2odk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "colorlog>=6.10.1",
    "dspy>=3.2.1",
    "fastapi>=0.139.0",
    "ftb-snbt-lib>=0.4.1",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
build = [
    "pyinstaller>=6.21.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-aiohttp>=1.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
